--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,14 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-na1.hs-scripts.com/21745834.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
